# embedded_rust

./: README.md
chapter1/: Cargo.toml  README.md  memory.x
chapter1/.cargo/: config.toml
chapter1/src/: main.rs
chapter2/: Embed.toml  README.md
chapter2/src/: main.rs
chapter3/: Cargo.toml  README.md
chapter3/src/: main.rs
chapter4/: Cargo.toml
chapter4/src/: main.rs
chapter5/: Cargo.toml
chapter5/src/: main.rs
chapter6/: Cargo.toml  README.md
chapter6/src/: button.rs  channel.rs  led.rs  main.rs  time.rs
