[package]
name = "embedded_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
rtt-target = "0.5.0"
embedded-hal = "1.0.0"
nrf51-hal = "0.18.0"
microbit = "0.15.1"
fugit = "0.3.7"
